# OpenSfM

./: .gitignore  CONTRIBUTING.md  README.md  conda.yml  pyproject.toml
badges/: coverage-summary.json
benchmark/: benchmark_example.json  compare.py  config.py  pipeline.py  run.py  workspace.py
configs/: aerial.yaml  terrestrial.yaml
opensfm/: align.py  config.py  context.py  dataset.py  exif.py  geo.py  geometry.py  io.py  mesh.py  pairs_selection.py  preview.py  preview_dataset.py  reconstruction.py  reconstruction_helpers.py  report.py
opensfm/actions/: export_rerun.py  extract_metadata.py  preview.py
opensfm/commands/: __init__.py  preview.py
opensfm/data/: camera_calibration.yaml  camera_corrections.py
opensfm/data/locale/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml
opensfm/src/: CMakeLists.txt
opensfm/src/bundle/: bundle_adjuster.h  irls_solver.h
opensfm/src/bundle/data/: bias.h
opensfm/src/bundle/python/: pybind.cc
opensfm/src/bundle/src/: bundle_adjuster.cc  irls_solver.cc
opensfm/src/bundle/test/: density_ratio_test.cc
opensfm/src/lib/: CMakeLists.txt
opensfm/src/lib/pointcloud/: CMakeLists.txt
opensfm/src/map/: CMakeLists.txt  defines.h  landmark.h  pymap.pyi  shot.h  tracks_manager.h
opensfm/src/map/src/: shot.cc  (+2 more)
opensfm/src/robust/: CMakeLists.txt
opensfm/src/sfm/: CMakeLists.txt  ba_helpers.h  reconstruction_grower.h
opensfm/test/: test_align.py  test_bundle.py  test_exif.py  test_geometry.py  test_io.py  test_multiview.py  test_reconstruction_incremental.py  test_reconstruction_triangulation.py  test_rig.py  utils.py
(+18 files in other folders)
